Changement login.php & sign.php, profil.php en cours

--- a/style.css
+++ b/style.css
@@ -34,12 +34,7 @@ body {
 }
 
 main {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     padding: 20px;
-    background-color: #ffffff;
 }
 
 footer {
@@ -47,7 +42,8 @@ footer {
     font-size: 16px;
     font-weight: 500;
     width: 100%;
-    flex-shrink: 0;
+    position: fixed;
+    bottom: 0;
 }
 
 footer a {
@@ -59,21 +55,24 @@ footer a:hover, header a:hover {
     text-decoration: underline;
 }
 
-#sign, #log {
+#sign, #log, #profil {
     font-family: 'Poppins', sans-serif;
 }
 
-#sign input, #log input {
+#sign input, #log input, #profil input {
     background-color: #E0E0E0;
     border-radius: 5px;
     color: #777777;
     width: 380px;
     height: 50px;
     font-size: 20px;
+}
+
+#sign input, #log input {
     margin-bottom: 32px;
 }
 
-#sign input::placeholder, #log input::placeholder {
+#sign input::placeholder, #log input::placeholder, #profil input::placeholder {
     color: #777777;
 }
 
@@ -92,4 +91,9 @@ footer a:hover, header a:hover {
     text-decoration: none;
     color: #777777;
     font-size: 14px;
+}
+
+#profil label {
+    font-size: 20px;
+    font-weight: bold;
 }
