Modification de profil.php, évolution du responsive, encore quelques changements à faire

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     background-color: #5A7D9A;
     font-size: 2rem;
     width: 100%;
+    height: 20vh;
     box-sizing: border-box;
 }
 
@@ -25,11 +26,11 @@ body {
 }
 
 main {
-    flex: 1; /* S'assure que main prend tout l'espace disponible */
+    flex: 1;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 5vw;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 0 2vw;
     background-color: #ffffff;
 }
 
@@ -40,7 +41,7 @@ footer {
     width: 100%;
     flex-shrink: 0;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px;
 }
 
 footer a {
@@ -87,6 +88,7 @@ footer a:hover, header a:hover {
     font-size: 0.875rem;
 }
 
+/* Responsive adjustments */
 @media (max-width: 390px) {
     .navbar {
         padding: 4vh 3vw;
@@ -103,15 +105,6 @@ footer a:hover, header a:hover {
     }
 }
 
-@media (max-width: 390px) {
-    .navbar .links a {
-        font-size: 0.8rem;
-    }
-    .navbar .links button {
-        font-size: 0.8rem;
-    }
-}
-
 @media (max-width: 768px) {
     .navbar .row {
         flex-direction: column;
@@ -119,5 +112,11 @@ footer a:hover, header a:hover {
     .navbar .col-12 {
         text-align: center;
         padding: 5px 0;
+    }
+}
+
+@media (max-width: 992px) {
+    main {
+        padding: 2vw;
     }
 }
