--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ footer a:hover, header a:hover {
     text-decoration: underline;
 }
 
-#sign, #log, #missing-dot {
+#sign, #log, #missing-dot, .scores {
     font-family: 'Poppins', sans-serif;
 }
 
@@ -129,6 +129,31 @@ footer a:hover, header a:hover {
     max-width: 900px;
     height: auto;
 }
+
+.scores {
+    width: 100%;
+    margin: 0 50px;
+}
+
+.scores button, .scores select {
+    color: #000000;
+    background-color: #A3C2D0;
+    border-radius: 10px;
+    height: 50px;
+    font-weight: 600;
+    margin-top: 50px;
+}
+
+.player {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: #E0E0E0;
+    padding: 10px;
+    padding-top: 20px;
+}
+
 
 
 /* Responsive adjustments */
