--- a/style.css
+++ b/style.css
@@ -7,19 +7,18 @@ body {
     flex-direction: column;
 }
 
-.navbar {
+.bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5vh 5vw;
     background-color: #5A7D9A;
     font-size: 2rem;
     width: 100%;
-    height: 20vh;
+    height: 15vh;
     box-sizing: border-box;
 }
 
-.navbar a, .navbar button {
+.bar a, .bar button {
     text-decoration: none;
     color: black;
     font-weight: 500;
