--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: #F7F7F7 !important;
+    background-color: #F7F7F7;
     font-family: 'Poppins', sans-serif;
     min-height: 100vh;
     display: flex;
@@ -11,18 +11,38 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5vh 5vw;
     background-color: #5A7D9A;
-    font-size: 2rem;
     width: 100%;
-    height: 20vh;
+    padding: 5vh 5vw;
     box-sizing: border-box;
 }
 
-.navbar a, .navbar button {
+.navbar {
+    font-size: 2rem;
+    height: 20vh;
+}
+
+footer {
+    font-size: 1rem;
+    flex-shrink: 0;
+    text-align: center;
+    padding: 10px;
+    background-color: #5A7D9A;
+    font-weight: 600;
+}
+
+.navbar a, .navbar button, footer a, #sign a, #log a {
     text-decoration: none;
     color: black;
     font-weight: 500;
+}
+
+footer a {
+    color: #6BAA75;
+}
+
+footer a:hover, header a:hover {
+    text-decoration: underline;
 }
 
 main {
@@ -31,96 +51,42 @@ main {
     align-items: flex-start;
     justify-content: flex-start;
     padding: 0 2vw;
-    background-color: #F7F7F7 !important;
-}
-
-footer {
-    background-color: #5A7D9A;
-    font-size: 1rem;
-    font-weight: 500;
-    width: 100%;
-    flex-shrink: 0;
-    text-align: center;
-    padding: 10px;
-}
-
-footer a {
-    text-decoration: none;
-    color: #6BAA75;
-}
-
-footer a:hover, header a:hover {
-    text-decoration: underline;
+    background-color: #F7F7F7;
 }
 
 #sign, #log, #missing-dot, .scores {
     font-family: 'Poppins', sans-serif;
 }
 
-#sign input, #log input {
+#sign input, #log input, #missing-input {
     background-color: #E0E0E0;
     border-radius: 5px;
     color: #777777;
-    width: 90%;
-    height: 8vh;
     font-size: 1.25rem;
     margin-bottom: 2rem;
+    width: 90%;
+    height: 8vh;
 }
 
 #sign input::placeholder, #log input::placeholder {
     color: #777777;
 }
 
-#sign button, #log button {
+#sign button, #log button, #missing-button {
     background-color: #C9C9C9;
     color: #777777;
     border-radius: 10px;
+    font-size: 1.25rem;
     width: 45%;
     height: 8vh;
-    font-size: 1.25rem;
-    margin-top: 1vh;
-    margin-bottom: 2vh;
+    margin: 1vh 0 2vh;
 }
 
-#sign a, #log a {
-    text-decoration: none;
-    color: #777777;
-    font-size: 0.875rem;
-}
-
-#missing-button {
-    background-color: #C9C9C9;
-    color: #777777;
-    border-radius: 10px;
-    width: 20%;
-    height: 4vh;
-    font-size: 1.25rem;
-    margin-top: 1vh;
-    margin-bottom: 2vh;
-}
-
-#missing-input {
-    background-color: #E0E0E0;
-    color: #777777;
-    border-radius: 5px;
-    width: 20%;
-    height: 6vh;
-    font-size: 1.25rem;
-    margin-bottom: 2rem;
-}
-
-#missing-dot {
-    justify-content: center;
-}
-
-#missing-center {
+#missing-dot, #missing-center {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #F7F7F7;
-}
-
-#missing-dot {
     text-align: center;
 }
 
@@ -132,44 +98,44 @@ footer a:hover, header a:hover {
 
 .scores {
     width: 100%;
-    margin: 0 50px;
+    /* margin: 0 50px; */
 }
 
 .scores button, .scores select {
-    color: #000000;
+    color: #000;
     background-color: #A3C2D0;
     border-radius: 10px;
     height: 50px;
     font-weight: 600;
-    margin-top: 50px;
+    /* margin-top: 50px; */
+}
+
+.template, .player {
+    background-color: #E0E0E0;
+    padding: 10px;
 }
 
 .player {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    background-color: #E0E0E0;
-    padding: 10px;
     padding-top: 20px;
 }
 
+.template {
+    margin-top: 1vw;
+    height: 40vw;
+    width: 70vw;
+}
 
-
-/* Responsive adjustments */
 @media (max-width: 390px) {
     .navbar {
         padding: 4vh 3vw;
         font-size: 1.5rem;
     }
-    main {
+    main, #sign input, #log input, #sign button, #log button {
+        font-size: 1rem;
         padding: 4vw;
-    }
-    #sign input, #log input {
-        font-size: 1rem;
-    }
-    #sign button, #log button {
-        font-size: 1rem;
     }
 }
 
@@ -188,7 +154,3 @@ footer a:hover, header a:hover {
         padding: 2vw;
     }
 }
-
-
-
-/* Keyframes */
