--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .bar {
     font-size: 2rem;
-    height: 20vh;
+    height: 15vh;
 }
 
 footer {
@@ -90,7 +90,7 @@ main {
     text-align: center;
 }
 
-#game {
+.game {
     width: 100%;
     max-width: 900px;
     height: auto;
